! Ticket #4937, Prevent showing black bars when window size after scale exceed current work area
! Ticket #4938, Fix resetting the settings from the "Options" dialog: some settings were (randomly) not
  restored to their default value
! Ticket #4954, Open dialog: Support quoted paths
! Ticket #4956, Improve Play/Pause mouse click responsiveness
! Ticket #4975, Unrelated images could be loaded as cover-art when no author information was available
  in the audio file
! Ticket #4991, Text subtitles: "opaque box" outlines were scaled twice
! Ticket #4992, DVB: Enabling the "Information" panel using the "Info" button on the "Navigation" dialog
  would reduce the size of the main window when hiding the panel from the "View" menu
! Ticket #4993, DVB: The content of the "Information" panel was lost when changing the UI language
! Ticket #4994, The "Channels" sub-menu was not translated


1.7.7 - 05 October 2014
=======================
+ Allow loading more than one subtitle file at a time using the "Load subtitle" dialog or drag-and-drop
+ Add advanced settings page
+ Add Arabic and Thai translations
+ Completely reworked subtitle queue:
    - The queue should be much faster than the older one for a similar number of buffered subpictures.
      It should also work much better when the number of subpictures becomes important
    - Subtitle animation can now be disabled even when using no buffering
    - Add the ability to choose at which state (in percentage of the full animation) an animated subtitle
      will be rendered when the animation is turned off
    - Add the ability to control the rate of the animation (in percentage of the movie frame rate)
    - Add the ability to control whether the subtitle queue is allowed to drop some subpictures in case
      subtitle rendering is too slow
+ Add an option to set JPEG quality when saving images (default quality is increased from 75% to 90%)
+ Ticket #353, Allow to control minimum file duration for remember position feature